# DH

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
include/: dh_kinematics.h  eigen_utils.h  kinematics.hpp
src/: dh_kinematics.cpp  kinematics.cpp  pybind_wrapper.cpp
test/: main.cpp
tests/: test_dh_kinematics.cpp  test_h_kinematics.cpp  test_script.py
