[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
    "cmake>=3.12",
    "scikit-build>=0.13.0"  # Needed for better CMake integration
]
build-backend = "setuptools.build_meta"

[project]
name = "dh_kinematics"
version = "0.1.0"
description = "Denavit-Hartenberg kinematics library"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/alecmcotton/DH"
Repository = "https://github.com/alecmcotton/DH"
Documentation = "https://github.com/alecmcotton/DH/blob/main/README.md"

[tool.setuptools]
packages = ["dh_kinematics"]

[tool.scikit-build]
cmake.minimum-version = "3.12"
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DEigen3_DIR=/path/to/eigen3",  # Optional: if Eigen3 needs explicit path
]
